tests/error_002.ts.out
Error: exception from mod1
    at Object.throwsError (file://[WILDCARD]/tests/subdir/mod1.ts:16:9)
    at foo (file://[WILDCARD]/tests/error_002.ts:4:3)
    at ModuleMetaData.eval [as factory ] (file://[WILDCARD]/tests/error_002.ts:7:1)
    at DenoCompiler._drainRunQueue ([WILDCARD]/js/compiler.ts:[WILDCARD])
    at DenoCompiler.run ([WILDCARD]/js/compiler.ts:[WILDCARD])
    at denoMain ([WILDCARD]/js/main.ts:[WILDCARD])
    at deno_main.js:1:1
